<resources>
    <string name="app_name">Автопоиск</string>
    <string name="select">Выбрать</string>
    <string name="mark">Марка</string>
    <string name="region">Регион</string>
    <string name="kpp">Тип КПП</string>
    <string name="body">Тип кузова</string>
    <string name="fuel">Тип топлива</string>
    <string name="engine">Объём двигателя</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="year">Год</string>
    <string name="price">Цена</string>
    <string name="catalogue">Каталог</string>
    <string name="add_car">Найти авто</string>
    <string name="articles">Статьи</string>
    <string name="mileage">Пробег:</string>
    <string name="page">Страница</string>
    <string name="favourite">Избранное</string>
    <string name="mechanic">механика</string>
    <string name="autiomatic">автомат</string>
    <string name="color">Цвет</string>
    <string name="unit_drive">Тип привода</string>
    <string name="petrol">бензин</string>
    <string name="diesel">дизель</string>
    <string name="gas_petrol">газ+бензин</string>
    <string name="electro">электро</string>
    <string name="gas">газ</string>
    <string name="petrol_electro">бенз.+электро</string>
    <string name="apply">Применить</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="empty_list">Список пуст</string>
    <string name="add_favor">Добавлено в избранное</string>
    <string name="delete_favor">Удалено из избранного</string>
    <string name="reset">Сбросить</string>
    <string name="No">Нет</string>
    <string name="Yes">Да</string>
    <string name="no_internet">Нет интернет соединения</string>
    <string name="want_to_exit_app">Вы хотите выйти из приложения?</string>
    <string name="show_car">Show car</string>
    <string name="error">Ошибка</string>
    <string name="write_to_seller">Написать</string>
    <string name="phone_to_seller">Позвонить</string>
    <string name="model">Модель</string>
    <string name="city">Город</string>
    <string name="usd">USD</string>
    <string name="user">Пользователь</string>
    <string name="change_user">Сменить пользователя</string>
    <string name="edit_user">Редактировать пользователя</string>
    <string name="edit_user_text">Редактирование профиля</string>
    <string name="user_name_edit">Введите имя профиля</string>
    <string name="photo_user_edit">Введите ссылку на фото профиля</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="email_user_edit">Введите Ваш email</string>
    <string name="phone_user_edit">Введите Ваш номер телефона</string>
    <string name="save">Сохранить</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="choose_photo_from_gallery">Выберите фото из галлереи</string>
    <string name="process_error">Ошибка изменения профиля</string>
    <string name="process_success">Выполнено успешно</string>
</resources>
